--- a/user/templates/user/cancel.html
+++ b/user/templates/user/cancel.html
@@ -67,11 +67,12 @@
 
        <p>Please select the type of booking you wish to cancel:</p>
 
-<a href="{% url 'train_history' %}" class="option-button">Cancel Train Bookings</a>
-<a href="{% url 'taxi_booking_history' %}" class="option-button">Cancel Taxi Bookings</a>
-<a href="{% url 'hoteldetails' %}" class="option-button">Cancel Hotel Bookings</a>
-<a href="{% url 'profile' %}" class="option-button">Back To Profile</a>
+        <a href="{% url 'cancel_by_id_view' %}" class="option-button">Cancel Train Bookings</a>
+        <a href="{% url 'taxi_booking_history' %}" class="option-button">Cancel Taxi Bookings</a>
+        <a href="{% url 'hoteldetails' %}" class="option-button">Cancel Hotel Bookings</a>
+        <a href="{% url 'profile' %}" class="option-button">Back to Profile</a>
 
     </div>
+
 </body>
 </html>
