--- a/static/css/hotel.css
+++ b/static/css/hotel.css
@@ -81,6 +81,20 @@ button[type="submit"]:hover {
     color: blue;
     text-decoration: none;
 }
+.book-hotel-btn {
+    background-color: darkgreen;  
+    color: white;             
+    padding: 10px 20px;         
+    font-size: 16px;            
+    border: none;             
+    border-radius: 6px;      
+    cursor: pointer;   
+    transition: background-color 0.3s ease; 
+}
+
+.book-hotel-btn:hover {
+    background-color: green;  
+}
 
 .login-link a:hover {
     text-decoration: underline;
