--- a/user/templates/user/hotelmanagement.html
+++ b/user/templates/user/hotelmanagement.html
@@ -38,7 +38,7 @@
         }
 
         .heading-container h2 {
-            color: green;
+            color: darkgreen;
             margin: 0;
         }
 
@@ -50,7 +50,7 @@
         }
 
         a.button {
-            background-color: green;
+            background-color: darkgreen;
             color: #ffffff;
             padding: 0.5rem 1rem;
             text-decoration: none;
@@ -59,7 +59,7 @@
         }
 
         a.button:hover {
-            background-color: rgb(13, 143, 13);
+            background-color: green;
         }
 
         table {
@@ -75,7 +75,7 @@
         }
 
         th {
-            background-color: green;
+            background-color: darkgreen;
             color: white;
         }
 
@@ -89,11 +89,11 @@
         }
 
         button.update {
-            background-color: green;
+            background-color: darkgreen;
         }
 
         button.update:hover {
-            background-color: rgb(13, 143, 13);
+            background-color: green;
         }
 
         button.delete {
@@ -223,7 +223,7 @@
                 <label>Booking Date:</label>
                 <input type="date" name="booking_date">
 
-                <button type="submit" style="width:100%; background-color:#16a34a; color:white; padding:0.5rem; border-radius:0.375rem;">Add Hotel</button>
+                <button type="submit" style="width:100%; background-color:darkgreen; color:white; padding:0.5rem; border-radius:0.375rem;">Add Hotel</button>
             </form>
         </div>
 
@@ -261,8 +261,8 @@
                 <input type="date" name="booking_date" value="{{ hotel.booking_date|date:'Y-m-d' }}">
 
                 <div class="flex-space">
-                    <button type="submit" style="flex:1; background-color:#2563eb;">Update Hotel</button>
-                    <button type="button" onclick="hideUpdateForm('{{ hotel.pk }}')" style="flex:1; background-color:#6b7280;">Cancel</button>
+                    <button type="submit" style="flex:1; background-color:darkgreen; color: white;">Update Hotel</button>
+                    <button type="button" onclick="hideUpdateForm('{{ hotel.pk }}')" style="flex:1; background-color:gray; color: white;">Cancel</button>
                 </div>
             </form>
         </div>
