--- a/user/templates/user/profile.html
+++ b/user/templates/user/profile.html
@@ -119,7 +119,7 @@
     <ul class="nav-links">
         <li><a href="{% url 'search_train' %}">Search & Book Train</a></li>
         <li><a href="{% url 'bookinghistory' %}">Booking Details</a></li>
-        <li><a href="{% url 'cancel' %}">Cancel Booking</a></li>
+        <li><a href="{% url 'cancelbooking' %}">Cancel Booking</a></li>
         <li><a href="{% url 'upgrade' %}">Upgrade Profile</a></li>
         <li><a href="#" onclick="logout()">Logout</a></li>
     </ul>
@@ -134,10 +134,6 @@
 </div>
 
 </nav>
-
-<div class="main-content">
-    <h1>Welcome to Your Profile</h1>
-</div>
 
 <script src="{% static 'js/profile.js' %}"></script>
 <script>
