--- a/user/templates/user/taximanagement.html
+++ b/user/templates/user/taximanagement.html
@@ -113,6 +113,20 @@
     tr:nth-child(even) {
       background-color: #f9f9f9;
     }
+    a.button {
+            background-color: darkgreen;
+            color: #ffffff;
+            padding: 10px;
+            text-decoration: none;
+            border-radius: 0.375rem;
+            font-weight: 600;
+             margin-right: 1080px;
+        }
+
+        a.button:hover {
+            background-color: green;
+        }
+
   </style>
 </head>
 <body>
@@ -130,7 +144,7 @@
         </div>
       {% endfor %}
     {% endif %}
-
+  <a href="{% url 'manage_services' %}" class="button">Back to Main</a>
     <h3>All Taxis</h3>
     <div>
     <table>
